<resources>
    <string name="app_name">swoosh</string>
    <string name="background_image">background image</string>
    <string name="app_logo">App logo</string>
    <string name="desired_league">Desired league</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="next">next</string>
    <string name="main_activity_background">Main activity background</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="bauler">Baller</string>
    <string name="button">Button</string>
    <string name="appSearches">Looking for a co-ed beginner league near you...</string>
</resources>